syntax = "proto2";

package com.trueaccord.proto.e2e;

option java_outer_classname = "Reps";

import "flat.proto";

message RepeatablesTest {
    repeated string strings = 1;
    repeated int32 ints = 2;
    repeated double doubles = 3 [packed = true];
    repeated Nested nesteds = 4;
    repeated int64 packedLongs = 6 [packed = true];

    enum Enum {
      ONE = 1;
      TWO = 2;
    }

    repeated Enum enums = 7 [packed = true];

    message Nested {
        optional int32 nested_field = 1;
    }

    // testing inclusion of a proto compiled with flat_package=true.
    optional FlatTest flat_test = 5;
}
